<resources>
    <string name="app_name">Digit Span</string>
    <string name="title">Digit Span Game</string>
    <string name="start_game">Start Game</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_text_title">How To Do Digit Span Test</string>
    <string name="instructions_text">A sequence of alphabets appears on the screen, one at a time. At the sound of the beep, you must click the alphabets in the same order. The number of alphabets increases with correct answers, and performance is indicated by the average number of digits correctly remembered.
        \n\nYou will be given 3 lives. For each wrong answers, the number of alphabets will be decreased. Each time you answer correctly, the number of alphabets will be added to the score. The game ends when you have zero life left.
        \n\nThe game will start from level 3. In easy mode, you will be given sequence of words from dictionary which will be easier to remember.
    </string>

    <string name="title_activity_game">Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lives_left">Lives Left: 3</string>
    <string name="level">Level 0</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="ready">Ready</string>
    <string name="current_score">Current Score</string>
    <string name="_999">999</string>
    <string name="high_score">High Score</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="last_level">Last Level</string>
    <string name="performance">Performance</string>
</resources>
