<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFDFDF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/live_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lives_left"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/level_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/level"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_alphabet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="#00000000"
                    android:text="?"
                    android:textAlignment="center"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_marginTop="20dp">

                    <TableRow
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/button_a"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/a" />

                        <Button
                            android:id="@+id/button_b"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/b" />

                        <Button
                            android:id="@+id/button_c"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/c" />

                        <Button
                            android:id="@+id/button_d"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/d" />

                        <Button
                            android:id="@+id/button_e"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/e" />

                        <Button
                            android:id="@+id/button_f"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/f" />

                        <Button
                            android:id="@+id/button_g"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/g" />

                        <Button
                            android:id="@+id/button_h"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/h" />

                        <Button
                            android:id="@+id/button_i"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/i" />

                        <Button
                            android:id="@+id/button_j"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/j" />

                        <Button
                            android:id="@+id/button_k"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/k" />

                        <Button
                            android:id="@+id/button_l"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/l" />

                        <Button
                            android:id="@+id/button_m"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/m" />
                    </TableRow>

                    <TableRow
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/button_n"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/n" />

                        <Button
                            android:id="@+id/button_o"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/o" />

                        <Button
                            android:id="@+id/button_p"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/p" />

                        <Button
                            android:id="@+id/button_q"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/q" />

                        <Button
                            android:id="@+id/button_r"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/r" />

                        <Button
                            android:id="@+id/button_s"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/s" />

                        <Button
                            android:id="@+id/button_t"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/t" />

                        <Button
                            android:id="@+id/button_u"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/u" />

                        <Button
                            android:id="@+id/button_v"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/v" />

                        <Button
                            android:id="@+id/button_w"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/w" />

                        <Button
                            android:id="@+id/button_x"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/x" />

                        <Button
                            android:id="@+id/button_y"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/y" />

                        <Button
                            android:id="@+id/button_z"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="40dp"
                            android:minHeight="40dp"
                            android:text="@string/z" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CAD3FF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/current_score"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_999"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/performance"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/performance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_999"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/ready_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/ready"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>